Enable Java 12 preview features